EZ-241 css fixes for block title alignment and images in landing and article page

--- a/scss/block/embed.scss
+++ b/scss/block/embed.scss
@@ -4,9 +4,7 @@
 
 .block--type-embed-block{
   margin: 30px 0;
-  .block-title {
-    text-align: center;
-  }
+
   .field--name-field-script {
     max-width: 520px;
     margin: 0 auto;
